--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -39,7 +39,6 @@
                             <th scope="col">Subtotal</th>
                         </tr>
                     </thead>
-                    
                     {% for item in bag_items %}
                         <tr >
                             <td class="p-3 w-25 cart-name-mob">
@@ -106,7 +105,6 @@
                     <tr>
                         <td colspan="5" class="text-right">
                             <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
-                                
                                 <span class="text-uppercase btn btn-links sm-mob-size">Back to shop</span>
                             </a>
                             <a href="{% url 'checkout' %}" class="btn btn-black rounded-0 btn-lg">
@@ -118,18 +116,17 @@
                             </a>
                         </td>
                     </tr>
-
                 </table>
             </div>
             {% else %}
                 <p class="center mb-5">Your cart is currently empty.</p>
                 <p class="center">
-                  <img src='{{ MEDIA_URL }}empty-cart.jpg' alt="Empty Shopping Cart" class="category-images">
+                    <img src='{{ MEDIA_URL }}empty-cart.jpg' alt="Empty Shopping Cart" class="category-images">
                 </p>
                 <p class="center">
-                <a href="{% url 'products' %}" class="btn rounded-0 btn-lg">
-                    <span class="text-uppercase back-btn">Back to store</span>
-                </a>
+                    <a href="{% url 'products' %}" class="btn rounded-0 btn-lg">
+                        <span class="text-uppercase back-btn">Back to store</span>
+                    </a>
                 </p>
             {% endif %}
         </div>
@@ -142,23 +139,25 @@
     {% include 'products/includes/quantity_input_script.html' %}
 
     <script type="text/javascript">
-        // Update quantity
-        $('.update-link').click(function(e) {
+        // Update quantity of item in cart
+        $('.update-link').click(function (e) {
             var form = $(this).prev('.update-form');
             form.submit();
         })
-    
-        // Remove item 
-        $('.remove-item').click(function(e) {
+
+        // Remove item from cart 
+        $('.remove-item').click(function (e) {
             var csrfToken = "{{ csrf_token }}";
             var itemId = $(this).attr('id').split('remove_')[1];
             var url = `/cart/remove/${itemId}/`;
-            var data = {'csrfmiddlewaretoken': csrfToken};
-    
+            var data = {
+                'csrfmiddlewaretoken': csrfToken
+            };
+
             $.post(url, data)
-             .done(function() {
-                 location.reload();
-             });
+                .done(function () {
+                    location.reload();
+                });
         })
     </script>
 {% endblock %}
