--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -28,11 +28,11 @@
             <p class="text-muted">Please fill out the form below and we will reply as soon as possible. Thank You.</p>
         </div>
     </div>
-
+   <!--Contact Form-->
     <div class="form-container contact-container">
-        <div class="row">
-          <div class="col-12">
-            <form method="POST" action="{% url 'contact' %}">
+      <div class="row">
+        <div class="col-12">
+          <form method="POST" action="{% url 'contact' %}">
             {% csrf_token %}
             {{ form | crispy }}
             <div class="text-right">
@@ -42,9 +42,9 @@
               <a class="btn btn-links" href="{% url 'messages_list' %}">Customer Messages</a>
               {% endif %}
             </div>
-            </form>
-          </div>
+          </form>
         </div>
+      </div>
     </div>
 </div>
 
