--- a/contact/templates/contact/message-list.html
+++ b/contact/templates/contact/message-list.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extra_title %}
-  | Contact Form
+  | Admin Messages
 {% endblock %}
 
 {% block extra_css %}
@@ -30,16 +30,13 @@
     </div>
     {% for m in message %}
     <div class="messages-container mt-5 p-2">
-    <p class="text-muted">{{ m.contact_sent }}</p>
-    <h4><span class="detail">SENDER: </span>{{ m.contact_name }}</h4>
-    <h5 id="email-mob"><span class="detail">EMAIL: </span>{{ m.contact_email }}</h5>
-    <p>{{ m.contact_body }}</p>
-    <a class="btn btn-links" href="{% url 'delete_message' m.id %}">Delete</a>
+      <p class="text-muted">{{ m.contact_sent }}</p>
+      <h4><span class="detail">SENDER: </span>{{ m.contact_name }}</h4>
+      <h5 id="email-mob"><span class="detail">EMAIL: </span>{{ m.contact_email }}</h5>
+      <p>{{ m.contact_body }}</p>
+      <a class="btn btn-links" href="{% url 'delete_message' m.id %}">Delete</a>
     </div>
     {% endfor %}
-    
-    
 </div>
-
 {% endblock %}
 
