--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -24,35 +24,35 @@
             <h3 >Add Product</h3>
         </div>
     </div>
-
+   <!--Form to add a product-->
     <div class="row">
-        <div class="col-12 col-md-6">
-            <form method="POST" action="{% url 'add_product' %}" class="form mb-2" enctype="multipart/form-data">
-                {% csrf_token %}
-                {% for field in form %}
-                  {% if field.name != 'image' %}
-                    {{ field | as_crispy_field }}
-                  {% else %}
-                    {{ field }}
-                  {% endif %}
-                {% endfor %}
-               <div class="text-right">
-                   <a class="btn btn-links" href="{% url 'products' %}">Cancel Upload</a>
-                   <button type="submit" class="btn btn-links">Upload</button>
-               </div>
-            </form>
-        </div>
+      <div class="col-12 col-md-6">
+        <form method="POST" action="{% url 'add_product' %}" class="form mb-2" enctype="multipart/form-data">
+          {% csrf_token %}
+          {% for field in form %}
+          {% if field.name != 'image' %}
+          {{ field | as_crispy_field }}
+          {% else %}
+          {{ field }}
+          {% endif %}
+          {% endfor %}
+          <div class="text-right">
+            <a class="btn btn-links" href="{% url 'products' %}">Cancel Upload</a>
+            <button type="submit" class="btn btn-links">Upload</button>
+          </div>
+        </form>
+      </div>
     </div>
 </div>
 
 {% endblock %}
 
 {% block postloadjs %}
-    {{ block.super }}
-    <script type="text/javascript">
-        $('#new-image').change(function() {
-            var file = $('#new-image')[0].files[0];
-            $('#filename').text(`Image will be set to: ${file.name}`);
-        });
-    </script>
+{{ block.super }}
+<script type="text/javascript">
+  $('#new-image').change(function () {
+    var file = $('#new-image')[0].files[0];
+    $('#filename').text(`Image will be set to: ${file.name}`);
+  });
+</script>
 {% endblock %}
