--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -24,24 +24,25 @@
             <h3 >Edit Product</h3>
         </div>
     </div>
-
+    <!--Form for editing a product-->
     <div class="row">
-        <div class="col-12 col-md-6">
-            <form method="POST" action="{% url 'edit_product' product.id %}" class="form mb-2" enctype="multipart/form-data">
-                {% csrf_token %}
-                {% for field in form %}
-                  {% if field.name != 'image' %}
-                    {{ field | as_crispy_field }}
-                  {% else %}
-                    {{ field }}
-                  {% endif %}
-                {% endfor %}
-               <div class="text-right">
-                   <a class="btn btn-links" href="{% url 'products' %}">Cancel Upload</a>
-                   <button type="submit" class="btn btn-links">Edit</button>
-               </div>
-            </form>
-        </div>
+      <div class="col-12 col-md-6">
+        <form method="POST" action="{% url 'edit_product' product.id %}" class="form mb-2"
+          enctype="multipart/form-data">
+          {% csrf_token %}
+          {% for field in form %}
+          {% if field.name != 'image' %}
+          {{ field | as_crispy_field }}
+          {% else %}
+          {{ field }}
+          {% endif %}
+          {% endfor %}
+          <div class="text-right">
+            <a class="btn btn-links" href="{% url 'products' %}">Cancel Upload</a>
+            <button type="submit" class="btn btn-links">Edit</button>
+          </div>
+        </form>
+      </div>
     </div>
 </div>
 
@@ -50,9 +51,9 @@
 {% block postloadjs %}
     {{ block.super }}
     <script type="text/javascript">
-        $('#new-image').change(function() {
-            var file = $('#new-image')[0].files[0];
-            $('#filename').text(`Image will be set to: ${file.name}`);
-        });
+      $('#new-image').change(function () {
+        var file = $('#new-image')[0].files[0];
+        $('#filename').text(`Image will be set to: ${file.name}`);
+      });
     </script>
 {% endblock %}
