--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -21,95 +21,92 @@
        <hr>
        <div class="row">
            <div class="col-12 product-container">
-            {% if product.image %}
-            <div>
-                {% if product.brand_image  %}
-                  <p class="center"><img src="{{ product.brand_image.url  }}" alt="{{ product.category.name }}"></p>
-                {% endif %}
-                  <a href="{{ product.image_url }}" target="_blank">
-                    <img class="detail-img img-fluid" src="{{ product.image_url }}" alt="{{ product.name }}">
-                  </a>
-            </div>
-            {% else %}
-            <a>
-                <img class="detail-img img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
-            </a>
-            {% endif %}
-            
-            <div class="center">
-                <p class="product-name-detail"><strong>{{ product.name }}</strong></p>
-                {% if product.category %}
-              <p>
-              <a href="{% url 'products' %}?category={{ product.category.name }}" class="text-muted">
-                <small class="text-muted"><i class="fa fa-sort mr-1" aria-hidden="true"></i>{{ product.category.friendly_name }}</small>
-              </a>
-              </p>
-              {% endif %}
-                {% if product.rating %}
-                <small class="text-muted roboto"><i class="fas fa-star mr-1 rating-color"></i>Rated {{ product.rating }} / 5</small>
-              {% else %}
-                <small class="text-muted roboto">There is no rating for this product, yet!</small>
-              {% endif %}
-              <div class="description-detail">
-              <p class="mt-3 center">{{ product.description }}</p>
-              </div>
-              <p class="lead font-weight-bold price-detail mt-5"><span class="price-color">Our Price: ${{ product.price }}</span></p>
-              <p class="free-delivery">Spend €{{ free_delivery_threshold }} for free delivery!</p>
-            
-              <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
-                {% csrf_token %}
-                <div class="form-row">
-                    <div class="col-12">
-                        <p class="mt-3"><strong>Quantity:</strong></p>
-                        <div class="form-group w-100">
-                            <div class="input-group input-quantity">
-                                <div class="input-group-prepend">
-                                    <!-- Decrement Quantity -->
-                                    <button class="decrement-qty btn btn-black rounded-0" 
-                                        data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
-                                        <span>
-                                            <i class="fas fa-minus fa-sm"></i>
-                                        </span>
-                                    </button>
-                                </div>
-                                <!-- Input Box -->
-                                <input class="form-control form-control-sm qty_input" type="number"
-                                    name="quantity" value="1" min="1" max="99"
-                                    data-item_id="{{ product.id }}"
-                                    id="id_qty_{{ product.id }}">
-                                <div class="input-group-append">
-                                    <!-- Increment Quantity -->
-                                    <button class="increment-qty btn btn-black rounded-0"
-                                        data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
-                                        <span>
-                                            <i class="fas fa-plus fa-sm"></i>
-                                        </span>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                        {% if request.user.is_superuser %}
-                          <div class="admin-btns">
-                              <a class="btn edit" href="{% url 'edit_product' product.id %}">Edit</a>
-                              <a class="btn delete" href="{% url 'delete_product' product.id %}">Delete</a>
-                          </div>
-                        </div>
-                        {% endif %}
+               {% if product.image %}
+               <div>
+                   {% if product.brand_image  %}
+                   <p class="center"><img src="{{ product.brand_image.url  }}" alt="{{ product.category.name }}"></p>
+                   {% endif %}
+                   <a href="{{ product.image_url }}" target="_blank">
+                       <img class="detail-img img-fluid" src="{{ product.image_url }}" alt="{{ product.name }}">
+                   </a>
+               </div>
+               {% else %}
+               <a>
+                   <img class="detail-img img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+               </a>
+               {% endif %}
 
-                    <div class=" col-12">
-                        <input type="submit" class="btn btn-links text-uppercase mt-5" value="Add to Cart">
-                        <a href="{% url 'products' %}" class="btn orange  mt-5">
-                            <span class="text-uppercase btn btn-links">Back to shop</span>
-                        </a>
-                    </div>
-                    <input type="hidden" name="redirect_url" value="{{ request.path }}">
+               <div class="center">
+                   <p class="product-name-detail"><strong>{{ product.name }}</strong></p>
+                   {% if product.category %}
+                   <p>
+                       <a href="{% url 'products' %}?category={{ product.category.name }}" class="text-muted">
+                           <small class="text-muted"><i class="fa fa-sort mr-1" aria-hidden="true"></i>{{ product.category.friendly_name }}</small>
+                       </a>
+                   </p>
+                   {% endif %}
+                   {% if product.rating %}
+                   <small class="text-muted roboto"><i class="fas fa-star mr-1 rating-color"></i>Rated
+                       {{ product.rating }} / 5</small>
+                   {% else %}
+                   <small class="text-muted roboto">There is no rating for this product, yet!</small>
+                   {% endif %}
+                   <div class="description-detail">
+                       <p class="mt-3 center">{{ product.description }}</p>
+                   </div>
+                   <p class="lead font-weight-bold price-detail mt-5"><span class="price-color">Our Price: ${{ product.price }}</span></p>
+                   <p class="free-delivery">Spend €{{ free_delivery_threshold }} for free delivery!</p>
+                   <!--Form for choosing quantity of chosen product-->
+                   <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
+                       {% csrf_token %}
+                       <div class="form-row">
+                           <div class="col-12">
+                               <p class="mt-3"><strong>Quantity:</strong></p>
+                               <div class="form-group w-100">
+                                   <div class="input-group input-quantity">
+                                       <div class="input-group-prepend">
+                                           <!-- Decrement Quantity -->
+                                           <button class="decrement-qty btn btn-black rounded-0"
+                                               data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                               <span>
+                                                   <i class="fas fa-minus fa-sm"></i>
+                                               </span>
+                                           </button>
+                                       </div>
+                                       <!-- Input Box -->
+                                       <input class="form-control form-control-sm qty_input" type="number"
+                                           name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}"
+                                           id="id_qty_{{ product.id }}">
+                                       <div class="input-group-append">
+                                           <!-- Increment Quantity -->
+                                           <button class="increment-qty btn btn-black rounded-0"
+                                               data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                               <span>
+                                                   <i class="fas fa-plus fa-sm"></i>
+                                               </span>
+                                           </button>
+                                       </div>
+                                   </div>
+                               </div>
+                            {% if request.user.is_superuser %}
+                               <div class="admin-btns">
+                                   <a class="btn edit" href="{% url 'edit_product' product.id %}">Edit</a>
+                                   <a class="btn delete" href="{% url 'delete_product' product.id %}">Delete</a>
+                               </div>
+                           </div>
+                           {% endif %}
+
+                           <div class=" col-12">
+                               <input type="submit" class="btn btn-links text-uppercase mt-5" value="Add to Cart">
+                               <a href="{% url 'products' %}" class="btn orange  mt-5">
+                                   <span class="text-uppercase btn btn-links">Back to shop</span>
+                               </a>
+                           </div>
+                           <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                       </div>
+                   </form>
                 </div>
-           </form> 
-
-
             </div>
-        
-        </div>
        </div>
    </div>
 {% endblock %}
