--- a/static/css/base.css
+++ b/static/css/base.css
@@ -4,7 +4,6 @@ html {
 
 body {
     margin: 0;
-    /* padding: 65px 0 0 0; */
     height: calc(100vh - 164px);
     position: relative;
 }
@@ -20,7 +19,7 @@ body {
 
 .color {
     color: #122c34;
-} 
+}
 
 .dark-color {
     color: #011627 !important;
@@ -45,12 +44,12 @@ body {
     width: 100px;
 }
 
-.social > a {
+.social>a {
     color: #122c34 !important;
     font-size: 1.5rem;
 }
 
-.social > a:hover {
+.social>a:hover {
     color: #36597d !important;
 }
 
@@ -59,7 +58,7 @@ body {
     height: 75px;
 }
 
-.dropdown > a {
+.dropdown>a {
     color: #122c34 !important;
 }
 
@@ -69,7 +68,7 @@ body {
 
 .dropdown-item:hover {
     background-color: #fdfffc;
-    color: #36597d; 
+    color: #36597d;
 }
 
 .category-head:focus {
@@ -92,46 +91,46 @@ body {
     font-family: 'Roboto', serif;
 }
 
-#delivery-banner > h4 {
+#delivery-banner>h4 {
     color: #011627 !important;
- }
+}
 
- .business-links {
-     display: flex;
-     justify-content: space-around;
-     list-style-type: none;
-     font-size: 22px;
-     font-family: 'Roboto', serif;
- }
+.business-links {
+    display: flex;
+    justify-content: space-around;
+    list-style-type: none;
+    font-size: 22px;
+    font-family: 'Roboto', serif;
+}
 
- .business-links > li {
+.business-links>li {
     color: #011627 !important;
- }
+}
 
- .business-links > li > a:hover {
-    text-decoration: none; 
+.business-links>li>a:hover {
+    text-decoration: none;
     list-style-type: none;
     color: #36597d !important;
- }  
+}
 
- .blog-link:hover {
-    text-decoration: none; 
+.blog-link:hover {
+    text-decoration: none;
     list-style-type: none;
     color: #36597d !important;
- }
+}
 
- .main-content {
+.main-content {
     min-height: calc(100vh - 100px);
- }
+}
 
- /* -------------------------------- index.html */
+/* -------------------------------- index.html */
 
- .hero {
+.hero {
     width: 100vw !important;
     height: 375px !important;
     margin: auto;
     object-fit: cover;
-}  
+}
 
 .hero-mob {
     height: 500px;
@@ -168,7 +167,7 @@ body {
     text-decoration: underline;
 }
 
-.category:hover > p {
+.category:hover>p {
     color: #36597d !important;
 }
 
@@ -187,96 +186,96 @@ body {
     padding: .5rem;
 }
 
- /* -------------------------------- product.html */
+/* -------------------------------- product.html */
 
- .product-img {
+.product-img {
     width: 175px;
     height: 175px;
     object-fit: contain;
- }
+}
 
- .product-container {
-     display: flex;
-     justify-content: space-between;
- }
+.product-container {
+    display: flex;
+    justify-content: space-between;
+}
 
- .free-delivery {
+.free-delivery {
     font-size: 1.3rem;
     font-family: 'Tenor Sans', serif;
     text-align: center;
- }
+}
 
- .product-name {
+.product-name {
     font-family: 'Tenor Sans', serif;
     color: #122c34;
     font-size: 2rem;
- }
+}
 
- .btn-links {
-     border: 1px solid black !important;
-     color: #011627;
- }
+.btn-links {
+    border: 1px solid black !important;
+    color: #011627;
+}
 
- .btn-links:hover {
+.btn-links:hover {
     border: 1px solid #5e7a97 !important;
     color: #5e7a97;
- }
+}
 
- .cat-products {
+.cat-products {
     font-family: 'Tenor Sans', serif;
     color: #122c34;
     text-decoration: none;
- }
+}
 
- .cat-products:hover {
+.cat-products:hover {
     text-decoration: none;
     color: #36597d !important;
- }
+}
 
- .price {
+.price {
     font-family: 'Tenor Sans', serif;
     color: #122c34;
- }
+}
 
- .name-rating-container {
-     display: block;
-     text-align: center;
- }
-
- .price-and-btns {
+.name-rating-container {
     display: block;
     text-align: center;
- }
+}
 
- .admin-btns {
-     display: flex;
-     text-align: center;
- }
+.price-and-btns {
+    display: block;
+    text-align: center;
+}
 
- .detail-link:hover {
+.admin-btns {
+    display: flex;
+    text-align: center;
+}
+
+.detail-link:hover {
     text-decoration: none;
     color: #36597d !important;
- }
+}
 
- .price-category {
-     display: block;
- }
+.price-category {
+    display: block;
+}
 
- .under-product-head {
+.under-product-head {
     color: #122c34;
     font-family: 'Tenor Sans', serif;
- }
+}
 
- .under-product-head:hover {
+.under-product-head:hover {
     color: #36597d !important;
     font-family: 'Tenor Sans', serif;
- }
+}
 
- .price-color {
-     color: #ff9f1c;
- }
+.price-color {
+    color: #ff9f1c;
+}
 
- .btt-button {
+.btt-button {
     height: 42px;
     width: 42px;
     position: fixed;
@@ -297,7 +296,7 @@ body {
     color: gold !important;
 }
 
- /* -------------------------------- product_detail.html */
+/* -------------------------------- product_detail.html */
 
 .product-container {
     display: flex;
@@ -400,7 +399,7 @@ body {
 /* -------------------------------- Shopping Cart */
 
 .back-btn {
-    color: #36597d; 
+    color: #36597d;
     font-family: 'Roboto', serif;
 }
 
@@ -420,8 +419,8 @@ body {
 
 .message-container {
     position: fixed;
-    top: 72px; /* 72px */
-    right: 15px; /* 15px */
+    top: 72px;
+    right: 15px;
     z-index: 99999999999;
 }
 
@@ -434,10 +433,10 @@ body {
 }
 
 .arrow-up {
-    width: 0; 
-    height: 0; 
+    width: 0;
+    height: 0;
     border-left: 4px solid transparent;
-    border-right: 4px solid transparent; 
+    border-right: 4px solid transparent;
     border-bottom: 10px solid black;
     position: absolute;
     top: -10px;
@@ -512,23 +511,9 @@ body {
     color: #122c34 !important;
 }
 
-.form-image {
-    background-image: url('{{ MEDIA_URL }}ms4-login.jpeg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.form-image-reg {
-    background-image: url('{{ MEDIA_URL }}ms4-register.jpeg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
 .form-container {
-   background: white;
-   width: 50%;
+    background: white;
+    width: 50%;
 }
 
 .inactive {
@@ -588,9 +573,9 @@ body {
     #email-mob {
         font-size: 13px !important;
     }
-    
+
     .container {
-      max-width: 80%;
+        max-width: 80%;
     }
 
     .icon-media-query {
@@ -641,55 +626,53 @@ body {
         color: #ff9f1c;
     }
 
-    .descriptor{
+    .descriptor {
         text-align: center;
     }
-  } 
+}
 
-  @media (max-width: 600px) {
+@media (max-width: 600px) {
     .form-image {
         background-image: none;
-        
+
     }
- 
+
     .form-container {
         width: 100%;
     }
-    
+
     .form-image-reg {
         background-image: none;
-        
+
     }
 
     .cart-name-mob {
         display: none;
     }
 
-      #mob-blog-title {
-          font-size: 2.5rem;
-      }
+    #mob-blog-title {
+        font-size: 2.5rem;
+    }
 
-      .product-name {
-          font-size: 1.7rem;
-      }
+    .product-name {
+        font-size: 1.7rem;
+    }
 
-      .price {
+    .price {
         font-size: 1rem;
-      }
+    }
 
-      .hero-mob {
-          padding-top: 100px;
-      }
-    } 
+    .hero-mob {
+        padding-top: 100px;
+    }
+}
 
 
-  @media (max-width: 768px) {
-   
-
+@media (max-width: 768px) {
     .date-mob {
         display: none;
     }
-    
+
     .hero-mob {
         object-fit: cover;
         height: 350px;
@@ -703,114 +686,113 @@ body {
         text-align: center;
     }
 
-  .category-images {
-    width: 90px;
-    height: 90px;
-    object-fit: contain;
-    text-align: center;
-  }
+    .category-images {
+        width: 90px;
+        height: 90px;
+        object-fit: contain;
+        text-align: center;
+    }
 
-  .navbar-collapse {
-    border: 1px solid black;
-  }
+    .navbar-collapse {
+        border: 1px solid black;
+    }
 
-  .descriptor {
-      text-align: center;
-  }
+    .descriptor {
+        text-align: center;
+    }
 
-  .product-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    text-align: center;
-}
+    .product-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        text-align: center;
+    }
 
-  .price {
-      text-align: center !important;
-      padding-top: 1rem; 
-  }
+    .price {
+        text-align: center !important;
+        padding-top: 1rem;
+    }
 
-  .mob-admin-btn {
-    margin-right: 1rem;
-    margin-bottom: 1rem;
-}
+    .mob-admin-btn {
+        margin-right: 1rem;
+        margin-bottom: 1rem;
+    }
 }
 
 @media (max-width: 990px) {
-  .mob-container {
-      margin-top: 3rem;
-  }
+    .mob-container {
+        margin-top: 3rem;
+    }
 
-  .headings {
-      padding-top: 1.5rem;
-  }
+    .headings {
+        padding-top: 1.5rem;
+    }
 
-  .contact-container {
-      width: 100%;
-  }
+    .contact-container {
+        width: 100%;
+    }
 
-  .history-mob {
-      margin-top: 2rem;
-  }
+    .history-mob {
+        margin-top: 2rem;
+    }
 
-  .edit-form {
-    width: 100%;
+    .edit-form {
+        width: 100%;
+    }
 }
 
-}
-
-  @media (min-width: 994px) {
+@media (min-width: 994px) {
     .category-container {
         margin-left: 10rem;
     }
-  }
+}
 
-  @media (min-width: 1000px) {
-  .carousel {
-    padding-top: 100px;
- }
+@media (min-width: 1000px) {
+    .carousel {
+        padding-top: 100px;
+    }
 
 }
 
 @media (min-width: 1200px) {
     .container {
-      max-width: 80%;
+        max-width: 80%;
     }
-  }
-  
-  
-  @media (min-width: 992px) {
-      .fixed-top-desktop-only {
-          position: fixed;
-          top: 0;
-          right: 0;
-          left: 0;
-          z-index: 1030;
-      }
-  
-      .header-container {
-          padding-top: 164px;
-      }
+}
 
-      .category-container-mobile {
-          display: none;
-      }
-  }
 
-  /* -------------------------------- Colors */
+@media (min-width: 992px) {
+    .fixed-top-desktop-only {
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 0;
+        z-index: 1030;
+    }
 
-  .orange {
-      color: #ff9f1c !important;
-  }
+    .header-container {
+        padding-top: 164px;
+    }
 
-  .dark-blue {
-      color: #011627;
-  }
+    .category-container-mobile {
+        display: none;
+    }
+}
 
-  .red {
-      color: #e71d36 !important;
-  }
+/* -------------------------------- Colors */
 
-  .green {
-      color: #2EC4B6 !important;
-  }
+.orange {
+    color: #ff9f1c !important;
+}
+
+.dark-blue {
+    color: #011627;
+}
+
+.red {
+    color: #e71d36 !important;
+}
+
+.green {
+    color: #2EC4B6 !important;
+}
