Add wireframes to readme

--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -20,7 +20,7 @@
 
 {% block content %}
 <div>
-    <h2 class="logo-font mt-5 mb-5 center blog-logo headings"><i>Blog</i></h2>
+    <h2 class="logo-font mt-5 mb-5 center blog-logo headings"><i>Latest Blogs</i></h2>
 </div>
 
 {% for blog in blog_list %}
